[notes] added notes and resources for randomized algorithms

--- a/notes/doc/mybib.bib
+++ b/notes/doc/mybib.bib
@@ -9,3 +9,10 @@
   year = {2019},
   title = {Algorithms},
 }
+
+@book{CLRS,
+  title={Introduction to algorithms},
+  author={Cormen, Thomas H and Leiserson, Charles E and Rivest, Ronald L and Stein, Clifford},
+  year={2022},
+  publisher={MIT press}
+}
