--- a/pa3/doc/pa3.tex
+++ b/pa3/doc/pa3.tex
@@ -174,16 +174,45 @@ With gold bricks having weights $\{2,2,3,5\}$ and $n = 9$, the algorithm will no
 \begin{problem}{3} 
 A randomized algorithm for generating biased random bits
 \end{problem}
-- mutually independent
-- p(F) = p(T) = 0.5
 
+\textbf{(a)} \\
+Let $P(1) = p$ and $P(0) = 1 - p$ denote the probability that ONEINTHREE returns 1 and 0, respectively. Let F denote the probability distribution of FAIRCOIN, with $F(1) = F(0) = 0.5$.
 
+We have 
+$$P(0) = 0.5 + (1 - 0.5)P(1) = 0.5 + 0.5P(1) \tab[1cm]$$  
 
-\textbf{(a)}
+We also have
+$$P(1) = 1 - P(0) = 1 - 0.5 - 0.5P(1) = 0.5 - 0.5P(1) \tab[1cm]$$ 
 
-\textbf{(b)}
+Hence, $P(1) = \frac{1}{3}$
+
+\textbf{(b)} \\
+The function only terminates when FAIRCOIN returns 0. The expected number of times we need to call FAIRCOIN it returns 0 is $\frac{1}{0.5} = 2$.
 
 \textbf{(c)}
+
+\begin{algorithm}
+\caption{$FAIRCOIN$}\label{alg:q3}
+\begin{algorithmic}
+    \If{$ONEINTHREE == 1$}
+        \Return 1
+    \Else
+        \Return $(1 - FAIRCOIN)(1 - FAIRCOIN)$
+    \EndIf
+\end{algorithmic}
+\end{algorithm}
+
+We have 
+$$F(1) = P(1) + P(0)F(0)F(0) \tab[1cm] (1)$$  
+
+We also have
+$$F(0) = 1 - F(1) \tab[1cm] (2)$$ 
+
+Plugging (1) into (2) results in
+$$F(0) = \frac{2}{3} - \frac{2}{3}F^2(0) \tab[1cm] (3)$$ 
+
+Solving (3) we get $F(0) = 0.5$.
+
 
 %==============================================================================%
 \newpage
@@ -191,6 +220,10 @@ A randomized algorithm for generating biased random bits
 Tax Screening System
 \end{problem}
 
+Chernoff inequality: \\
+$$Pr[X > (1 + \delta)\mu] < (\frac{e^{\delta}}{(1+\delta)^{1+\delta}})^{\mu}$$
+
+$$Pr[X > (1 - \delta)\mu] < e^{-\frac{1}{2} \mu \delta^2}$$
 \bibliographystyle{alpha}
 \bibliography{mybib}
 \end{document}
